Fix source path in example html.

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>n9 - Example Code</title>
         <script src="../src/vendors/d3/d3.js"></script>
-        <script src="../src/js/d3_scenario.js"></script>
+        <script src="../src/js/scenario.js"></script>
         <script src="main.js"></script>
     </head>
     <body onContextMenu="return false">
